feat(py8c): complete recursive directory transfers
